--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -51,7 +51,7 @@
     "p-four": "Respuesta incorrectas",
     "p-five": "Porcentaje de aciertos",
     "title-final": "Espero que hayas disfrutado el juego vuelve a intentarlo o comienza una partida nueva",
-    "link-one": "Jugar de nuevo",
-    "link-two": "Jugar de nuevo"
+    "link-one": "Probar de nuevo",
+    "link-two": "Nuevo juego"
   }
 }
